// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetPreviewSection RTL renders the snippet editor inside of it 1`] = `
<SnippetPreviewSection
  hasPaperStyle={true}
  icon="eye"
  theme={
    Object {
      "isRtl": true,
    }
  }
  title="Snippet editor"
>
  <.SnippetPreviewSection__Section-gjy5w5-0
    hasPaperStyle={true}
    headingIcon="eye"
    headingIconColor="#555"
    headingLevel={3}
    headingText="Snippet editor"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SnippetPreviewSection__Section-gjy5w5-0",
            "isStatic": false,
            "lastClassName": "jdYJw",
            "rules": Array [
              "max-width:640px;&",
              ".StyledSection__StyledSectionBase-sc-1c84weu-2",
              "{padding-left:0;padding-right:0;& ",
              ".StyledSection__StyledHeading-sc-1c84weu-0",
              "{",
              [Function],
              ":20px;margin-left:",
              [Function],
              ";}}",
            ],
          },
          "displayName": "SnippetPreviewSection__Section",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SnippetPreviewSection__Section-gjy5w5-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      hasPaperStyle={true}
      headingIcon="eye"
      headingIconColor="#555"
      headingLevel={3}
      headingText="Snippet editor"
    >
      <StyledSection
        className="SnippetPreviewSection__Section-gjy5w5-0 jdYJw"
        hasPaperStyle={true}
        headingIcon="eye"
        headingIconColor="#555"
        headingLevel={3}
        headingText="Snippet editor"
      >
        <span>
          yoast-components StyledSection
        </span>
      </StyledSection>
    </StyledComponent>
  </.SnippetPreviewSection__Section-gjy5w5-0>
</SnippetPreviewSection>
`;

exports[`SnippetPreviewSection renders the snippet editor inside of it 1`] = `
<SnippetPreviewSection
  hasPaperStyle={true}
  icon="eye"
  theme={
    Object {
      "isRtl": false,
    }
  }
  title="Snippet editor"
>
  <.SnippetPreviewSection__Section-gjy5w5-0
    hasPaperStyle={true}
    headingIcon="eye"
    headingIconColor="#555"
    headingLevel={3}
    headingText="Snippet editor"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SnippetPreviewSection__Section-gjy5w5-0",
            "isStatic": false,
            "lastClassName": "jdYJw",
            "rules": Array [
              "max-width:640px;&",
              ".StyledSection__StyledSectionBase-sc-1c84weu-2",
              "{padding-left:0;padding-right:0;& ",
              ".StyledSection__StyledHeading-sc-1c84weu-0",
              "{",
              [Function],
              ":20px;margin-left:",
              [Function],
              ";}}",
            ],
          },
          "displayName": "SnippetPreviewSection__Section",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SnippetPreviewSection__Section-gjy5w5-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      hasPaperStyle={true}
      headingIcon="eye"
      headingIconColor="#555"
      headingLevel={3}
      headingText="Snippet editor"
    >
      <StyledSection
        className="SnippetPreviewSection__Section-gjy5w5-0 jdYJw"
        hasPaperStyle={true}
        headingIcon="eye"
        headingIconColor="#555"
        headingLevel={3}
        headingText="Snippet editor"
      >
        <span>
          yoast-components StyledSection
        </span>
      </StyledSection>
    </StyledComponent>
  </.SnippetPreviewSection__Section-gjy5w5-0>
</SnippetPreviewSection>
`;
